<resources>
    <string name="app_name">HHContractionTimer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Contraction Timer</string>
    <string name="nav_header_subtitle">The app will help to track your contractions and determine when it is time to go to the hospital</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">My profile</string>
    <string name="menu_measure">Measure</string>
    <string name="menu_summary">Summary</string>
    <string name="menu_about">About</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_communicate_group">Communicate</string>
    <string name="menu_send">Send</string>
    <string name="menu_share">Share</string>
    <string name="menu_save">Save</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Measurement screen -->
    <string name="start_btn">Start</string>
    <string name="stop_btn">Stop</string>
    <string name="sensitive_level_1">Normal</string>
    <string name="sensitive_level_2">Medium</string>
    <string name="sensitive_level_3">High</string>
    <string name="interval">Interval: </string>
    <string name="duration">Duration: </string>
    <string name="insert_successfull">Successful!</string>
    <string name="normal">Mild</string>
    <string name="middle">Moderate</string>
    <string name="high">Severe</string>
    <string name="intensity">Choose the intensity of your pain</string>
    <string name="measurement_detail">Contraction Timer Detail</string>

    <!-- Edit contraction Timer -->
    <string name="edit_contraction">Edit</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="done">Done</string>

    <string name="memo">Memo</string>
    <string name="hint_memo">Enter your memo here.</string>

    <!-- Profile screen -->
    <string name="user_infor">Your Information</string>
    <string name="spouse_infor">Partner Information</string>
    <string name="user_prompt_email">Enter your email</string>
    <string name="user_firstName">Enter your first name</string>
    <string name="user_lastName">Enter your last name</string>
    <string name="user_yearBirth">Enter your birth year</string>
    <string name="user_estimate_baby_date">Estimate the birthday of your baby</string>
    <string name="spouse_emailAddress">Enter your spouse email address</string>
    <string name="spouse_phoneNumber">Enter your spouse phone number </string>
    <string name="doctor_firstName">Enter Doctor first name</string>
    <string name="doctor_lastName">Enter Doctor last name</string>
    <string name="emailAddress">Email address</string>
    <string name="phoneNumber">Phone number</string>
    <string name="doctor_infor">Doctor Information</string>
    <string name="save_successful">Saving SUCCESSFUL!</string>
    <string name="save_error">Saving ERROR! Please try again!</string>
    <string name="email_invalid">Valid email is required</string>
    <string name="phone_invalid">Valid phone number is required</string>
    <string name="invalid_data_input">Please correct the input data!</string>
    <string name="save_summary_success">Save summary sucessfully</string>

    <string name="doctor_note">Please contact with your Doctor in working time or call to hospital</string>

    <!-- Summary Contraction -->
    <string name="summary_contraction_duration">Contraction Durations</string>
    <string name="summary_contraction_timeline">Contraction Timeline</string>
    <string name="summary_interval_description">Interval Durations description</string>
    <string name="summary_intensity_distribution">Intensity Distribution</string>
    <string name="summary_description">Description</string>
    <string name="email_subject">[HHContactTimer] - My result</string>
    <string name="email_content">Please help me check my contractTimer</string>
    <string name="choose_email_app">Choose Email App</string>
    <string name="choose_sms_app">Choose Message App</string>
    <string name="share_data_title_dialog">Send contractTimer data</string>
    <string name="share_data_description_dialog">Please choose the way that you want to share</string>
    <string name="share_data_via_SMS">Share via SMS</string>
    <string name="share_data_via_email">Share via Email</string>
    <string name="share_data_dialog_close">Close</string>

</resources>
