<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.measure.detail.MeasurementDetailFragment">
    <data>
        <variable
            name="viewModel"
            type="com.hh.contractiontimer.ui.measure.MeasurementViewModel" />
        <variable
            name="contractionTimer"
            type="com.hh.contractiontimer.model.ContractionTimer" />
    </data>
    <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:padding="8dp"
        >
        <RelativeLayout
            android:id="@+id/layout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorPrimaryDark"
            android:padding="8dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_contraction"
                android:id="@+id/title"
                android:textColor="@android:color/white"
                android:layout_alignParentLeft="true"
                android:textSize="18sp"/>
            <ImageButton
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_delete"
                android:layout_alignParentRight="true"
                android:id="@+id/delete_btn"/>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_time"
            android:id="@+id/labelStartTime"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/layout_title"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/TextTitle"
            />
        <TextView
            android:id="@+id/startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{contractionTimer.startDateString}"
            style="@style/TextSubTitle"
            app:layout_constraintTop_toBottomOf="@+id/labelStartTime"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/end_time"
            android:id="@+id/labelEndTime"
            app:layout_constraintTop_toBottomOf="@+id/startTime"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/TextTitle"
            />
        <TextView
            android:id="@+id/endTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{contractionTimer.endDateString}"
            style="@style/TextSubTitle"
            app:layout_constraintTop_toBottomOf="@+id/labelEndTime"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/memo"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/endTime"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/memo_label"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/memo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewModel.memo}"
            style="@style/TextSubTitle"
            android:maxLength="256"
            android:hint="@string/hint_memo"
            android:lines="10"
            app:layout_constraintTop_toBottomOf="@+id/memo_label"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intensity"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/memo"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/text"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text"
            android:orientation="vertical">
        <RadioGroup
            android:id="@+id/intensity_radioGroup_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:checkedButton="@={viewModel.checkedButtonId}"
            android:weightSum="1.5">
            <RadioButton
                android:id="@+id/intensity_mild_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_button_select_unselect"
                android:checked="false"
                android:drawableTop="@drawable/ic_intensity_mild"
                android:gravity="center"
                android:text="@string/normal"
                android:textSize="10sp"
                android:textColor="@android:color/black"
                android:tooltipText="Menstrual cramp" />

            <RadioButton
                android:id="@+id/intensity_moderate_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:textColor="@android:color/black"
                android:button="@android:color/transparent"
                android:checked="false"
                android:drawableTop="@drawable/ic_intensity_moderate"
                android:gravity="center"
                android:text="@string/middle"
                android:background="@drawable/radio_button_select_unselect"
                android:textSize="10sp"
                android:tooltipText="5 x Menstrual cramp" />

            <RadioButton
                android:id="@+id/intensity_severe_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@drawable/radio_button_select_unselect"
                android:button="@android:color/transparent"
                android:checked="false"
                android:textColor="@android:color/black"
                android:drawableTop="@drawable/ic_intensity_severe"
                android:gravity="center"
                android:text="@string/high"
                android:textSize="10sp"
                android:tooltipText="Can't talk"

                />
        </RadioGroup>

        <Button
            android:id="@+id/done_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/holo_green_light"
            android:gravity="center"
            android:text="@string/done"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/intensity_radioGroup" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
</layout>