<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="user"
            type="com.hh.contractiontimer.model.User"/>
    </data>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:text="@string/user_infor"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/user_firstName"
                android:text="@={user.firstName}"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/user_lastName"
                android:inputType="text"
                android:text="@={user.lastName}"
                android:maxLines="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/yearBirthError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/yearBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/user_yearBirth"
                android:inputType="number"
                android:maxLength="4"
                android:text="@={user.birthYearOfUser}"
                android:maxLines="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/user_estimate_baby_date"/>
        <DatePicker
            android:id="@+id/estimateBabyBirth"
            android:layout_marginTop="10dp"
            android:calendarViewShown="false"
            android:day= "@={user.estimateBabyDay}"
            android:month= "@={user.estimateBabyMonth}"
            android:year= "@={user.estimateBabyYear}"
            android:elevation="4dp"
            android:background="@android:color/white"
            android:datePickerMode="spinner"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>
</LinearLayout>
</layout>