<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="user"
            type="com.hh.contractiontimer.model.User"/>
    </data>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!-- Spouse Information -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:text="@string/spouse_infor"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:cardElevation="2dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:background="@color/colorGray"
            android:paddingRight="8dp"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/spouseEmailError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
                <EditText
                    android:id="@+id/spouseEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@={user.emailAddressOfSpouse}"
                    android:inputType="textEmailAddress"
                    android:hint="@string/emailAddress"
                    android:maxLines="1"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/spousePhoneNumberError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="5dp">
                <EditText
                    android:id="@+id/spousePhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/phoneNumber"
                    android:maxLines="1"
                    android:text="@={user.phoneNumberOfSpouse}"
                    android:paddingStart="5dp"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
</layout>